RH-2004-07-26-1: Bugfix:    definition of wc_cqueue added to man page.              
                 Issue:     1103
                 Bugtraq:   Not defined
                 Changed:   sge_types(1)
                 Review:    AH
                 
RH-2004-07-26-0: Bugfix:    man page indicated that qsub accepts "-r yes|no"
                 Issue:     1103
                 Bugtraq:   ????

SG-2004-07-26-0: Bugfix:    - first part of the event_master changes. The total
                            update of a event client is now thread save.
                            - excluded the flowwing character from a job name: "\"
                 Changed:   qmaster, submit.1
                 Bugtraq:   5076372
                 Review:    JG

SG-2004-07-25-0: Bugfix:    - fixed lWriteListTo to use the spedified file handle
                            - some minor cleanup
                            - changed the job name specification that all characters
                              are allowed except: "\n", "\t", "\r", "/", ":", "@"
                 Issue:     -NA-
                 Changed:   qmaster, submit.1

CR-2004-07-24-1: Bugfix:    schedd and qmaster get out of sync - no scheduling
                            for long time
                 Changed:   communication lib
                 Issue:     1141
                 Bugtraq:   5077589
                 Review:    JG

MD-2004-07-22-2  Bugfix:    reprioritize_interval descr in sched_conf(5) needs improvement
                 Changed:   man5/sched_conf.5
                 Issue:     1040
                 Bugtraq:   5077165
                 Review:    JG

MD-2004-07-22-1: Bugfix:    NO_REPRIORITATION should be removed from man pages
                 Changed:   man5/queue_conf.5, man5/sge_conf.5, sge_priority.5
                 Issue:     1097
                 Bugtraq:   507167
                 Review:    JG

MD-2004-07-22-0: Bugfix:    uninstall procedure doesn't remove rc-script of execd!